use class colSM so sub-titles are consistent

--- a/andsome/layout/templates/changelist.html
+++ b/andsome/layout/templates/changelist.html
@@ -6,7 +6,7 @@
 
 {% block bodyclass %}change-list{% endblock %}
 
-{% block coltype %}flex{% endblock %}
+{% block coltype %}colSM{% endblock %}
 
 {% block sidebar %}{% include "sidebar.html" %}{% endblock %}
 
