--- a/andsome/layout/templates/base.html
+++ b/andsome/layout/templates/base.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-au" xml:lang="en-au">
 <head>
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/{% block stylesheet %}base{% endblock %}.css"/>
-{% load adminmedia %}
+{% load admin_static %}{% load url from future %}
 {% block extrastyle %}{% endblock %}
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>{% block title %}{% endblock %}&nbsp;|&nbsp;{% block site_name_title %}{% endblock %}</title>
 <meta name="author" content="{% block author %}Sam Morrison{% endblock %}"/>
 {% block favicon %}{% endblock %}
-<script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% admin_media_prefix %}{% endfilter %}";</script>
+<script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";</script>
 {% block site_extrahead %}{% endblock %}
 {% block extrahead %}{% endblock %}
 </head>
@@ -30,10 +30,10 @@
         <div id="user-tools">
         {% if user.is_authenticated %}
         Welcome, <strong>{{ user.first_name }}</strong> 
-        / <a href="{% url logout %}">Log out</a>
+        / <a href="{% url 'logout' %}">Log out</a>
 			{% else %}
 			Welcome, <strong>Guest</strong> / 
-        <a href="{% url login %}">Log In</a>
+        <a href="{% url 'login' %}">Log In</a>
 			{% endif %}
         </div>
         {% endif %}
