--- a/andsome/layout/templates/base.html
+++ b/andsome/layout/templates/base.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-au" xml:lang="en-au">
 <head>
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/{% block stylesheet %}base{% endblock %}.css"/>
-{% load admin_static %}{% load url from future %}
+{% load staticfiles %}{% load url from future %}
 {% block extrastyle %}{% endblock %}
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>{% block title %}{% endblock %}&nbsp;|&nbsp;{% block site_name_title %}{% endblock %}</title>
